--- a/project-app/src/index.html
+++ b/project-app/src/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProjectApp</title>
+  <title>Horvath Balint Developer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <header>
+    <div class="navbar">
+          <div class="logo">
+            <a href="#"><img src="#" alt="Logo"/></a>
+          </div>
+          <div class="item-list">
+            <ul>
+              <li><a href="#">Test menu 1</a></li>
+              <li><a href="#">Test menu 2</a></li>
+              <li><a href="#">Test menu 3</a></li>
+            </ul>
+          </div>
+      </div>
+  </header>
   <app-root></app-root>
 </body>
 </html>
