--- a/project-app/src/index.html
+++ b/project-app/src/index.html
@@ -10,18 +10,18 @@
 <body>
   <header>
     <div class="navbar">
-          <div class="logo">
-            <a href="#"><img src="#" alt="Logo"/></a>
+          <div class="logo-content-wrap">
+            <a class="logo" href="#"><img src="#" alt="Logo"/></a>
           </div>
           <div class="item-list">
             <ul>
-              <li><a href="#">Test menu 1</a></li>
-              <li><a href="#">Test menu 2</a></li>
-              <li><a href="#">Test menu 3</a></li>
+              <li><a class="menu-item" href="#">Test menu 1</a></li>
+              <li><a class="menu-item" href="#">Test menu 2</a></li>
+              <li><a class="menu-item" href="#">Test menu 3</a></li>
             </ul>
           </div>
       </div>
   </header>
   <app-root></app-root>
-</body>
+  </body>
 </html>
