Skeleton of landingpage

--- a/project-app/src/index.html
+++ b/project-app/src/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="navbar">
           <div class="logo-content-wrap">
-            <a class="logo" href="#"><img src="#" alt="Logo"/></a>
+            <a class="logo" href="#"><img class="img-fluid rounded" src="#" alt="Logo"/></a>
           </div>
           <div class="item-list">
             <ul>
@@ -23,5 +23,12 @@
       </div>
   </header>
   <app-root></app-root>
+  <footer>
+    <ul>
+      <li><a href="#">Test Content 1</a></li>
+      <li><a href="#">Test Content 2</a></li>
+      <li><a href="#">Test Content 3</a></li>
+    </ul>
+  </footer>
   </body>
 </html>
