Refactor with bootstrap

--- a/project-app/src/index.html
+++ b/project-app/src/index.html
@@ -8,26 +8,29 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <header>
-    <div class="navbar">
-          <div class="logo-content-wrap">
-            <a class="logo" href="#"><img class="img-fluid rounded" src="#" alt="Logo"/></a>
-          </div>
-          <div class="item-list">
-            <ul>
-              <li><a class="menu-item" href="#">Test menu 1</a></li>
-              <li><a class="menu-item" href="#">Test menu 2</a></li>
-              <li><a class="menu-item" href="#">Test menu 3</a></li>
-            </ul>
-          </div>
-      </div>
+  <header class="navbar">
+    <div class="container-fluid">
+      <div class="row align-items-center justify-content-center">
+        <div class="col">
+          <a class="logo" href="#"><img class="img-fluid rounded" src="#" alt="Logo"/></a>
+        </div>
+      </div>     
+        <div class="col offset-lg-7 item-list">
+          <ul class="row align-items-center justify-content-center">
+            <li><a class="col-1 menu-item" href="#">Test menu 1</a></li>
+            <li><a class="col-1 menu-item" href="#">Test menu 2</a></li>
+            <li><a class="col-1 menu-item" href="#">Test menu 3</a></li>
+          </ul>
+        </div>
+     
+    </div>
   </header>
   <app-root></app-root>
-  <footer>
-    <ul>
-      <li><a href="#">Test Content 1</a></li>
-      <li><a href="#">Test Content 2</a></li>
-      <li><a href="#">Test Content 3</a></li>
+  <footer class="container-fluid">
+    <ul class="row align-items-center justify-content-center">
+      <li><a class="col" href="#">Test Content 1</a></li>
+      <li><a class="col" href="#">Test Content 2</a></li>
+      <li><a class="col" href="#">Test Content 3</a></li>
     </ul>
   </footer>
   </body>
