Refactor and placeholder images

--- a/project-app/src/index.html
+++ b/project-app/src/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
       <div class="row align-items-center justify-content-center">
         <div class="col">
-          <a class="logo" href="#"><img class="img-fluid rounded" src="#" alt="Logo"/></a>
+          <a class="logo" href="#"><img class="img-fluid rounded" src="/assets/main-logo.png" alt="Logo"/></a>
         </div>
       </div>     
         <div class="col offset-lg-7 item-list">
