--- a/project-app/src/index.html
+++ b/project-app/src/index.html
@@ -8,22 +8,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <header class="navbar">
-    <div class="container-fluid">
-      <div class="row align-items-center justify-content-center">
-        <div class="col">
-          <a class="logo" href="#"><img class="img-fluid rounded" src="/assets/main-logo.png" alt="Logo"/></a>
-        </div>
-      </div>     
-        <div class="col offset-lg-7 item-list">
-          <ul class="row align-items-center justify-content-center">
-            <li><a class="col-1 menu-item" href="#">Test menu 1</a></li>
-            <li><a class="col-1 menu-item" href="#">Test menu 2</a></li>
-            <li><a class="col-1 menu-item" href="#">Test menu 3</a></li>
-          </ul>
-        </div>
-     
-    </div>
+  <header>
+    <nav class="navbar navbar-expand-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img class="img-fluid rounded" src="/assets/main-logo.png" alt="Logo"/></a>
+        <ul class="navbar-nav align-items-center justify-content-end">
+          <li class="nav-item"><a class="nav-link menu-item" href="#">Test menu 1</a></li>
+          <li class="nav-item"><a class="nav-link menu-item" href="#">Test menu 2</a></li>
+          <li class="nav-item"><a class="nav-link menu-item" href="#">Test menu 3</a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
   <app-root></app-root>
   <footer class="container-fluid">
